bioengineering tabs work